# inference-lab

./: .env.example  .gitignore  README.md  pyproject.toml
src/inference_lab/: __init__.py  config.py  main.py
src/inference_lab/bedrock/: __init__.py  client.py
tests/: test_config.py
